replaced missing spacer image by a trinidad spacer

--- a/repo/service/trunk/search/binary/binary-search-webapp/src/main/webapp/WEB-INF/facelets/layout/template-ebi.xhtml
+++ b/repo/service/trunk/search/binary/binary-search-webapp/src/main/webapp/WEB-INF/facelets/layout/template-ebi.xhtml
@@ -76,7 +76,7 @@
                    style="width: 100%">
                 <tr>
                     <td class="leftmargin">
-                        <img src="#{requestConfigBean.absoluteContextPath}/inc/images/spacer.gif" class="spacer" alt="spacer"/>
+                        <tr:spacer width="1"/>
                     </td>
 
                         <td class="leftmenucell" id="leftmenucell">
