Remove duplication of source databases and duplication of interaction det method

--- a/repo/service/branches/binary-search-webapp_before-trinidad/src/main/webapp/WEB-INF/facelets/components/ResultsTable.xhtml
+++ b/repo/service/branches/binary-search-webapp_before-trinidad/src/main/webapp/WEB-INF/facelets/components/ResultsTable.xhtml
@@ -246,7 +246,7 @@
                 rowIndexVar="rowIndex">
 
         <bs:hilightableRowElement url="#{psimitab:xrefUrl(appConfigBean.linkContext, sourceDb)}"
-                                  text="#{sourceDb.text}"
+                                  text="#{psimitab:filterDbSource(sourceDb)}"
                                   columnAlias="sourceDb" index="#{index}"
                                   rowIndex="#{rowIndex}" rowCount="#{rowCount}" />
 
